# ai4write

./: Dockerfile  README.md  app.py  disco.json  logo_loader.py  pyproject.toml  requirements.txt
assets/: logo_loader.py
