[project]
name = "ai4write"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiwrite",
    "gradio>=5.14.0",
    "huggingface-hub>=0.25.2", # 0.25.2
]

[tool.uv.sources]
aiwrite = { git = "https://github.com/Deeplearn-PeD/aiwrite" }
